[package]
name = "nasu"
version = "0.0.2"
authors = ["Esteban Borai <estebanborai@gmail.com>", "David Camperos"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"
description = "Command-line utility which poll on remote addresses in order to perform status checks periodically"
readme = "README.md"
repository = "https://github.com/EstebanBorai/nasu"
categories = ["asynchronous", "command-line-utilities", "development-tools", "web-programming"]

[lib]
name = "libnasu"
path = "src/lib/lib.rs"

[[bin]]
name = "nasu"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0"
hyper = { version = "0.14", features = ["client", "http1", "http2", "tcp"] }
hyper-tls = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"

[dev-dependencies]
tokio-test = "0.4.0"
